# Jvedio

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_EN.md  README_JP.md
.codebuddy/memory/: 2026-03-18.md  2026-03-19.md  2026-03-20.md
.codebuddy/plans/: desktop-ui-tauri-replatform_024f6c97.md
.opencode/: README.md
Jvedio-WPF/: Jvedio.sln
Jvedio-WPF/Jvedio/: App.xaml.cs  Jvedio.csproj  WindowStartUp.xaml  WindowStartUp.xaml.cs
Jvedio-WPF/Jvedio.Test/: Jvedio.Test.csproj  TestAssemblyBootstrap.cs  TestBootstrap.cs
Jvedio-WPF/Jvedio.Worker/: Jvedio.Worker.csproj  Program.cs
doc/: CHANGELOG.md  data-directory-convention.md  developer.md  logging-convention.md  metatube-only-plan.md  playwright-e2e-test-plan.md  test-current-suite.md  test-plan.md  test-refactor-plan.md  test-strategy.md  test-targets.md
doc/_legacy/: README.md
doc/modules/: 01-bootstrap-startup.md  02-config-persistence.md  03-main-ui.md  04-scan-import.md  05-sync-plugin.md  (+8 more)
dotnet/: Jvedio.sln
electron/: README.md  package-lock.json  package.json  tsconfig.main.json  tsconfig.renderer.json
log/: test-output.txt
scripts/: build-release.ps1  bump-version.ps1  cleanup-e2e-data.ps1  run-worker-integration-tests.ps1  run-worker-tests.ps1  run-worker-unit-tests.ps1  seed-e2e-data.ps1  start-e2e-env.ps1  stop-e2e-env.ps1  verify-backend-apis.ps1
tauri/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: lib.rs  main.rs  shell_log.rs  worker.rs
temp/: cleanup-test-artifacts.ps1
(+557 files in other folders)
